# DarkMessiah

./: .gitignore  CMakeLists.txt
cmake/: uninstall.cmake.in
data/: CMakeLists.txt  htaccess
src/: CMakeLists.txt  main.c
src/libautoma/: CMakeLists.txt  all.h  engine.c  engine.h  rewrite.def  rule.h  sourcenode.c  state.h
src/libjournal/: CMakeLists.txt  ELF64.c  journal.h
src/libjournal/bcunit/: ELF64.c  automate.c  basic.c  main.c
